--- a/.github/workflows/aqi_model_training.yml
+++ b/.github/workflows/aqi_model_training.yml
@@ -41,122 +41,18 @@ jobs:
         mkdir -p data_repositories/models/evaluation_reports
         mkdir -p deployment/
         
-    - name: Ensure historical data availability
+    - name: Verify historical data exists (no synthesis)
       run: |
         python -c "
-        import sys
-        sys.path.append('.')
-        import pandas as pd
-        import numpy as np
-        import os
-        from datetime import datetime, timedelta
-        import logging
-        
+        import os, sys, logging
         logging.basicConfig(level=logging.INFO)
         logger = logging.getLogger(__name__)
-        
-        logger.info('📦 Ensuring historical data availability...')
-        
-        try:
-            # Check if historical data exists
-            historical_file = 'data_repositories/historical_data/real_historical_dataset.csv'
-            
-            if not os.path.exists(historical_file):
-                logger.warning(f'⚠️ Historical data file not found: {historical_file}')
-                logger.info('🔧 Creating comprehensive historical dataset...')
-                
-                # Create historical data directory if it doesn't exist
-                os.makedirs('data_repositories/historical_data', exist_ok=True)
-                
-                # Generate 150 days of historical data (3600 hours)
-                start_date = datetime.now() - timedelta(days=150)
-                end_date = datetime.now() - timedelta(hours=1)  # Exclude current hour
-                
-                # Create hourly timestamps
-                timestamps = pd.date_range(start=start_date, end=end_date, freq='H')
-                
-                # Generate realistic historical data
-                historical_data = []
-                
-                for i, timestamp in enumerate(timestamps):
-                    # Base AQI with seasonal and daily patterns
-                    base_aqi = 80  # Base AQI level
-                    
-                    # Seasonal variation (higher in winter, lower in summer)
-                    seasonal_factor = 1.0 + 0.3 * np.sin(2 * np.pi * timestamp.dayofyear / 365)
-                    
-                    # Daily variation (higher during rush hours)
-                    hour = timestamp.hour
-                    if 7 <= hour <= 9 or 17 <= hour <= 19:  # Rush hours
-                        daily_factor = 1.2
-                    elif 2 <= hour <= 5:  # Early morning
-                        daily_factor = 0.8
-                    else:
-                        daily_factor = 1.0
-                    
-                    # Weekend effect (slightly lower AQI on weekends)
-                    weekend_factor = 0.9 if timestamp.weekday() >= 5 else 1.0
-                    
-                    # Random variation
-                    random_factor = np.random.normal(1.0, 0.1)
-                    
-                    # Calculate final AQI
-                    aqi = base_aqi * seasonal_factor * daily_factor * weekend_factor * random_factor
-                    aqi = max(0, min(500, aqi))  # Clamp to valid range
-                    
-                    # Determine AQI category
-                    if aqi <= 50:
-                        aqi_category = 1
-                    elif aqi <= 100:
-                        aqi_category = 2
-                    elif aqi <= 150:
-                        aqi_category = 3
-                    elif aqi <= 200:
-                        aqi_category = 4
-                    else:
-                        aqi_category = 5
-                    
-                    # Generate corresponding pollution and weather data
-                    record = {
-                        'timestamp': timestamp,
-                        'aqi_category': aqi_category,
-                        'pm2_5': aqi * 0.4 + np.random.normal(0, 5),  # PM2.5 correlates with AQI
-                        'pm10': aqi * 0.6 + np.random.normal(0, 8),   # PM10 correlates with AQI
-                        'co': np.random.uniform(0.1, 2.0),            # CO levels
-                        'no': np.random.uniform(0.1, 50.0),           # NO levels
-                        'no2': np.random.uniform(5.0, 80.0),          # NO2 levels
-                        'o3': np.random.uniform(10.0, 120.0),         # O3 levels
-                        'so2': np.random.uniform(1.0, 30.0),          # SO2 levels
-                        'nh3': np.random.uniform(0.1, 20.0),          # NH3 levels
-                        'temperature': np.random.uniform(15, 35),      # Temperature
-                        'dew_point': np.random.uniform(10, 25),       # Dew point
-                        'relative_humidity': np.random.uniform(30, 80), # Humidity
-                        'precipitation': np.random.uniform(0, 5),      # Precipitation
-                        'snow': 0,                                     # Snow (rare in Peshawar)
-                        'wind_direction': np.random.uniform(0, 360),   # Wind direction
-                        'wind_speed': np.random.uniform(0, 15),        # Wind speed
-                        'wpgt': np.random.uniform(0, 10),              # Wind gust
-                        'pressure': np.random.uniform(1000, 1020),     # Pressure
-                        'tsun': np.random.uniform(0, 12),              # Sunshine duration
-                        'coco': np.random.randint(0, 4)               # Cloud coverage
-                    }
-                    
-                    historical_data.append(record)
-                
-                # Create DataFrame and save
-                historical_df = pd.DataFrame(historical_data)
-                historical_df.to_csv(historical_file, index=False)
-                
-                logger.info(f'✅ Created historical dataset: {len(historical_df)} records')
-                logger.info(f'📅 Date range: {historical_df[\"timestamp\"].min()} to {historical_df[\"timestamp\"].max()}')
-                logger.info(f'📊 AQI range: {historical_df[\"aqi_category\"].min()} - {historical_df[\"aqi_category\"].max()}')
-                
-            else:
-                logger.info(f'✅ Historical data already exists: {historical_file}')
-                
-        except Exception as e:
-            logger.error(f'❌ Historical data creation failed: {e}')
+        historical_file = 'data_repositories/historical_data/real_historical_dataset.csv'
+        logger.info('📦 Verifying historical data exists...')
+        if not os.path.exists(historical_file):
+            logger.error(f'❌ Historical data file not found: {historical_file}. This workflow never synthesizes data.')
             sys.exit(1)
+        logger.info(f'✅ Historical data found: {historical_file}')
         "
         
     - name: Merge historical and real-time data
@@ -261,154 +157,45 @@ jobs:
             sys.exit(1)
         "
         
-    - name: Train model with incremental learning
+    - name: Run Phase 4 training pipeline (multi-model + tuning + ensemble)
+      run: |
+        python phase4_cicd_pipeline_integration.py
+
+    - name: Promote best model to latest
       run: |
         python -c "
-        import sys
-        sys.path.append('.')
-        import pandas as pd
-        import numpy as np
-        from sklearn.model_selection import train_test_split
-        from sklearn.preprocessing import StandardScaler
-        import lightgbm as lgb
-        from datetime import datetime
-        import pickle
-        import json
-        import logging
-        
+        import os, sys, glob, shutil, logging
         logging.basicConfig(level=logging.INFO)
         logger = logging.getLogger(__name__)
-        
-        logger.info('🤖 Starting model training with incremental learning...')
-        
-        try:
-            # Load engineered features
-            df = pd.read_csv('data_repositories/features/engineered_features.csv')
-            logger.info(f'📊 Loaded engineered features: {len(df)} records, {len(df.columns)} features')
-            
-            # Prepare features and target
-            df['timestamp'] = pd.to_datetime(df['timestamp'])
-            df = df.sort_values('timestamp')
-            
-            # Select features (exclude timestamp and target)
-            feature_cols = [col for col in df.columns if col not in ['timestamp', 'aqi_category']]
-            X = df[feature_cols].select_dtypes(include=[np.number])
-            y = df['aqi_category']
-            
-            # Clean data - handle NaN and infinite values
-            X = X.fillna(0)  # Replace NaN with 0
-            X = X.replace([np.inf, -np.inf], 0)  # Replace infinite values with 0
-            y = y.fillna(y.median())  # Replace NaN in target with median
-            
-            logger.info(f'🎯 Training data: {X.shape[0]} samples, {X.shape[1]} features')
-            
-            # Split data (time-based split)
-            split_idx = int(0.8 * len(X))
-            X_train, X_test = X.iloc[:split_idx], X.iloc[split_idx:]
-            y_train, y_test = y.iloc[:split_idx], y.iloc[split_idx:]
-            
-            # Scale features
-            scaler = StandardScaler()
-            X_train_scaled = scaler.fit_transform(X_train)
-            X_test_scaled = scaler.transform(X_test)
-            
-            # Train LightGBM model
-            model = lgb.LGBMRegressor(
-                n_estimators=500,
-                learning_rate=0.1,
-                max_depth=6,
-                num_leaves=31,
-                random_state=42,
-                verbose=-1
-            )
-            
-            logger.info('🔄 Training LightGBM model...')
-            model.fit(X_train_scaled, y_train)
-            
-            # Evaluate model
-            train_score = model.score(X_train_scaled, y_train)
-            test_score = model.score(X_test_scaled, y_test)
-            
-            logger.info(f'📈 Training R² Score: {train_score:.4f}')
-            logger.info(f'📈 Test R² Score: {test_score:.4f}')
-            
-            # Save model and scaler
-            timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')
-            
-            model_path = f'data_repositories/models/trained_models/model_{timestamp}.pkl'
-            scaler_path = f'data_repositories/models/trained_models/scaler_{timestamp}.pkl'
-            
-            with open(model_path, 'wb') as f:
-                pickle.dump(model, f)
-            with open(scaler_path, 'wb') as f:
-                pickle.dump(scaler, f)
-                
-            # Save latest model for deployment
-            with open('deployment/latest_model.pkl', 'wb') as f:
-                pickle.dump(model, f)
-            with open('deployment/latest_scaler.pkl', 'wb') as f:
-                pickle.dump(scaler, f)
-                
-            # Create evaluation report
-            evaluation_report = {
-                'timestamp': timestamp,
-                'training_date': datetime.now().isoformat(),
-                'model_type': 'LightGBM',
-                'training_samples': int(len(X_train)),
-                'test_samples': int(len(X_test)),
-                'features': int(len(X.columns)),
-                'train_r2_score': float(train_score),
-                'test_r2_score': float(test_score),
-                'model_path': model_path,
-                'scaler_path': scaler_path,
-                'feature_importance': dict(zip(X.columns, [float(x) for x in model.feature_importances_]))
-            }
-            
-            with open(f'data_repositories/models/evaluation_reports/evaluation_{timestamp}.json', 'w') as f:
-                json.dump(evaluation_report, f, indent=2)
-                
-            logger.info('✅ Model training completed successfully')
-            logger.info(f'📁 Model saved: {model_path}')
-            logger.info(f'📁 Scaler saved: {scaler_path}')
-            
-        except Exception as e:
-            logger.error(f'❌ Model training failed: {e}')
+        candidates = glob.glob('deployment/*/production_model.pkl')
+        if not candidates:
+            logger.error('❌ No production_model.pkl found in deployment/*/. Phase 4 pipeline may have failed.')
             sys.exit(1)
+        latest = sorted(candidates)[-1]
+        os.makedirs('deployment', exist_ok=True)
+        shutil.copy(latest, 'deployment/latest_model.pkl')
+        logger.info(f'✅ Promoted {latest} to deployment/latest_model.pkl')
         "
         
-    - name: Validate model performance
+    - name: Validate model performance (from Phase 4 report)
       run: |
         python -c "
-        import sys
-        sys.path.append('.')
-        import json
-        import glob
-        import logging
-        
+        import glob, json, logging, sys
         logging.basicConfig(level=logging.INFO)
         logger = logging.getLogger(__name__)
-        
-        # Find latest evaluation report
-        eval_files = glob.glob('data_repositories/models/evaluation_reports/evaluation_*.json')
-        if eval_files:
-            latest_eval = max(eval_files)
-            
-            with open(latest_eval, 'r') as f:
-                eval_data = json.load(f)
-                
-            test_score = eval_data['test_r2_score']
-            
-            logger.info(f'📊 Latest model test R² score: {test_score:.4f}')
-            
-            # Performance threshold check
-            if test_score >= 0.85:
-                logger.info('✅ Model performance meets threshold (≥0.85)')
-            else:
-                logger.warning(f'⚠️ Model performance below threshold: {test_score:.4f}')
-                
-        else:
-            logger.error('❌ No evaluation reports found')
+        reports = sorted(glob.glob('cicd_pipeline_report_*.json'))
+        if not reports:
+            logger.error('❌ No Phase 4 pipeline reports found (cicd_pipeline_report_*.json)')
             sys.exit(1)
+        latest = reports[-1]
+        with open(latest, 'r') as f:
+            data = json.load(f)
+        best = float(data.get('performance_summary', {}).get('best_performance', 0.0))
+        logger.info(f'📊 Phase 4 best test R²: {best:.4f}')
+        if best < 0.85:
+            logger.warning('⚠️ Best performance below threshold (0.85).')
+        else:
+            logger.info('✅ Performance threshold met (≥0.85).')
         "
         
     - name: Commit model and reports
@@ -417,8 +204,9 @@ jobs:
         git config --local user.name "github-actions[bot]"
         
         # Add model files and reports (force add to override .gitignore)
-        git add -f data_repositories/models/
-        git add -f deployment/
+        git add -f data_repositories/models/ || true
+        git add -f deployment/ || true
+        git add -f cicd_pipeline_report_*.json || true
         
         # Commit with timestamp
         git commit -m "🤖 Model retraining: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" || echo "No changes to commit"
@@ -437,11 +225,11 @@ jobs:
         echo "**Status:** ✅ Completed" >> model_training_report.md
         echo "" >> model_training_report.md
         echo "## Training Summary" >> model_training_report.md
-        echo "- **Model Type:** LightGBM Regressor" >> model_training_report.md
-        echo "- **Training Strategy:** Incremental Learning" >> model_training_report.md
+        echo "- **Pipeline:** Phase 4 CI/CD (RF baseline, XGBoost + LightGBM tuning, ensembles)" >> model_training_report.md
+        echo "- **Training Strategy:** Incremental time-series training on merged historical + latest data" >> model_training_report.md
         echo "- **Data Source:** Historical + Real-time merged" >> model_training_report.md
-        echo "- **Features:** 266 engineered features" >> model_training_report.md
-        echo "- **Performance:** R² Score ≥ 0.85" >> model_training_report.md
+        echo "- **Outputs:** deployment/<timestamp>/production_model.pkl and deployment/latest_model.pkl" >> model_training_report.md
+        echo "- **Performance Gate:** Best test R² ≥ 0.85 (soft gate)" >> model_training_report.md
         
     - name: Upload training report
       uses: actions/upload-artifact@v4
